# ricotta

./: .gitignore  ACKNOWLEDGEMENTS.md  LICENSE  README.md  WRITEUP.md  pyproject.toml
examples/: belief_probe_demo.py  effattn_validation.json  effattn_validation.py  ricotta_colab_demo.ipynb  tts_demo.py
ricotta/: __init__.py  hidden.py  monitor.py  probe.py  report.py  tts.py
ricotta/attn/: __init__.py  extract.py  hybrid.py  render.py  serialize.py
ricotta/attn/static/: headview.css  headview.js
ricotta/attrib/: __init__.py  attribute.py  diff.py  embed.py  faithful.py  models.py  relevance.py  render.py  spans.py
ricotta/circuits/: __init__.py  diff.py  report.py  run.py  validate.py
tests/: test_attn.py  test_attrib.py  test_attrib_embed.py  test_charts.py  test_circuits.py  test_hidden.py  test_hybrid.py  test_monitor.py  test_probe.py  test_ricotta.py  test_tts.py
